--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "log-js",
-  "version": "1.0.0",
-  "description": "An awesome logger",
+  "version": "1.1.2",
+  "description": "An incredibly simple logger.",
   "main": "index.js",
   "dependencies": {
     "chalk": "^1.1.1",
