--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "log-js",
-  "version": "1.3.2",
+  "version": "1.3.4",
   "description": "An incredibly simple logger.",
   "main": "index.js",
   "dependencies": {
-    "chalk": "^1.1.1",
-    "colour": "^0.7.1",
-    "use-strict": "^1.0.1"
+    "chalk": "^1.1.1"
   },
   "devDependencies": {},
   "scripts": {
